--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.5",
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
