--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "flowbite": "^1.5.4",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slideshow-image": "^4.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
