--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "flowbite": "^1.5.4",
+    "flowbite-react": "^0.3.5",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
