--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "flowbite-react": "^0.3.5",
     "next": "13.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
-    
+    "react-dom": "18.2.0",
+    "react-slideshow-image": "^4.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
