--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-slideshow-image": "^4.0.5",
     "swiper": "^8.4.5"
