--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint-config-next": "13.0.4",
     "flowbite": "^1.5.4",
     "flowbite-react": "^0.3.7",
-    "js-cookie": "3.0.1",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "13.0.4",
     "next-transpile-modules": "^10.0.0",
