--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.41.1",
     "react-icons": "^4.7.1",
     "react-slideshow-image": "^4.0.5",
+    "sharp": "^0.31.3",
     "swiper": "^8.4.5"
   },
   "devDependencies": {
